compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedVariable.amy
object Undefined
  fn foo(): Int(32) = { i + 1 }
end Undefined
